--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
 
   wordpress:
+    depends_on:
+      - mysql
     container_name: wordpress
     image: wordpress
     ports:
@@ -32,6 +34,8 @@ services:
       - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
 
   nginx-proxy:
+    depends_on:
+      - wordpress
     container_name: nginx-proxy
     image: jwilder/nginx-proxy:alpine
     ports:
