--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,5 +83,6 @@ services:
     command: >
       /bin/bash -c "
         wp core install --url=\"$VIRTUAL_HOST\" --title=\"$WORDPRESS_TITLE\" --admin_user=\"$WORDPRESS_USER\" --admin_password=\"$WORDPRESS_PASSWD\" --admin_email=\"$WORDPRESS_USER_EMAIL\"; 
-        wp plugin delete hello akismet 
+        wp plugin delete hello akismet;
+        wp theme delete twentynineteen twentytwenty
         "
