--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ WORDPRESS_DB_PASSWORD=password
 WORDPRESS_DB_NAME=wpdb
 
 # Wordpress CLI environment variables 
-WORDPRESS_TITLE="MyWebsite"
-WORDPRESS_USER="admin"
-WORDPRESS_PASSWD="password"
-WORDPRESS_USER_EMAIL="info@mywebsite2.com"
+WORDPRESS_TITLE=MyWebsite
+WORDPRESS_USER=admin
+WORDPRESS_PASSWD=password
+WORDPRESS_USER_EMAIL=info@mywebsite2.com
 
 # Nginx environment variables
 DEFAULT_HOST=www.mywebsite2.com
