Improve .env file

--- a/.env
+++ b/.env
@@ -15,6 +15,8 @@ WORDPRESS_TITLE=MyWebsite
 WORDPRESS_USER=admin
 WORDPRESS_PASSWD=password
 WORDPRESS_USER_EMAIL=info@mywebsite2.com
+
+# Wordpress plugins and theme to install
 WORDPRESS_PLUGINS="antispam-bee better-font-awesome contact-form-7 cookie-law-info php-code-widget re-add-underline-justify custom-css-js social-media-widget w3-total-cache widget-logic wordpress-seo wp-google-maps"
 WORDPRESS_THEME=vantage
 
