Define process to set Wordpress Seo Plugin settings

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ WORDPRESS_DB_NAME=wpdb
 
 # Wordpress CLI environment variables 
 WORDPRESS_TITLE=MyWebsite
+WORDPRESS_DESCRIPTION="This is My Website"
 WORDPRESS_USER=admin
 WORDPRESS_PASSWD=password
 WORDPRESS_USER_EMAIL=info@mywebsite2.com
