--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       - wordpress_volume:/var/www/html
       - ./configure_wp.sh:/configure_wp.sh
       - ./.env:/.env
-      - ./plugins_settings:/plugins_settings
+      - ./options:/options
     links:
       - mysql:mysql
     command: "/configure_wp.sh"
