--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 # Docker MySQL environment variables
+
+WORDPRESS_VERSION=5.6.0
+MYSQL_VERSION=8.0.23
+WORDPRESS_CLI_VERSION=2.4.0
+
 MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=wpuser
 MYSQL_PASSWORD=password
@@ -18,7 +23,8 @@ WORDPRESS_PASSWD=password
 WORDPRESS_USER_EMAIL=info@mywebsite2.com
 
 # Wordpress plugins and theme to install
-WORDPRESS_PLUGINS="antispam-bee better-font-awesome contact-form-7 cookie-law-info php-code-widget re-add-underline-justify custom-css-js social-media-widget w3-total-cache widget-logic wordpress-seo wp-google-maps"
+#WORDPRESS_PLUGINS="antispam-bee better-font-awesome contact-form-7 cookie-law-info php-code-widget re-add-underline-justify custom-css-js social-media-widget w3-total-cache widget-logic wordpress-seo wp-google-maps"
+WORDPRESS_PLUGINS=""
 WORDPRESS_THEME=vantage
 
 # Nginx environment variables
